--- a/Pages/admin.cshtml
+++ b/Pages/admin.cshtml
@@ -16,7 +16,7 @@
 
 <div class="header-card">
         <a href="/ffDashboard" class="navigate-map-btn">Navigate to map<i class="fas fa-map"></i></a>
-        <a href="/ffDashboard"><div class="logo" style="cursor:pointer;"></div></a>
+        <a href="/index"><div class="logo" style="cursor:pointer;"></div></a>
 
         <div class="profile-section">
             <!-- Left: Avatar and Edit Button -->
