--- a/wwwroot/css/forgotPass.css
+++ b/wwwroot/css/forgotPass.css
@@ -80,7 +80,7 @@ body {
             font-weight: 600;
             cursor: pointer;
             transition: transform 0.3s ease, box-shadow 0.3s ease;
-            margin: 0 0 3rem 0;
+            margin: 0 0 1rem 0;
             font-family: 'Poppins', sans-serif;
         }
         .forgot-pass-btn:hover {
@@ -203,7 +203,7 @@ body {
         }
 
         #serverError {
-            margin: 10px 0;
+            margin: 0 0 5px 40px;
             padding: 10px;
             border-radius: 4px;
             text-align: center;
